# RustFileExplorerCli

./: Cargo.toml  README.md
src/: AppInfo.rs  draw.rs  main.rs
src/filesystem/: explorer.rs  mod.rs  util.rs
