[package]
name = "RustFileExplorerCLI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version = "0.27.0", features = ["serde"]}
open = {version = "5.0.1"}
serde ={ version = "*", features = ["derive"]}
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.33", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.19.0", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0.56"
walkdir = "2"